# Runback

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pnpm-lock.yaml  pyproject.toml  runback_industry_grade_prd.md  runback_industry_grade_prd_vfinal.md
apps/server/: pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 0001_initial.py  0002_add_event_dedup_table.py  0003_add_todo_state_table.py
apps/server/runback_server/: __init__.py  config.py  db.py  main.py  sse.py
apps/server/runback_server/api/: __init__.py  flows.py  hooks.py  replay.py  (+2 more)
apps/server/tests/: conftest.py  test_api_flows.py  test_api_node_detail.py  test_api_override_404.py  test_api_override_endpoint.py  test_api_run_creation.py  test_api_run_dag.py  test_api_runners.py  test_api_runs.py  test_api_stubs.py  test_archive.py  test_artifacts.py  test_cache.py  test_classifier_bash_approval.py  test_classifier_bash_rerun.py  test_classifier_bash_unknown.py  test_classifier_bash_unsafe.py  test_classifier_keys.py  test_classifier_overrides.py  test_classifier_tool_defaults.py  test_e2e_smoke.py  test_e2e_sse_smoke.py  test_fake_runner_smoke.py  test_groups.py  test_hooks_endpoint.py  test_ids.py  test_launcher.py  test_ledger_record_post.py  test_ledger_record_pre.py  test_models_smoke.py  test_normalizer_lifecycle.py  test_normalizer_tool_nodes.py  test_reconciler_with_classifier.py  test_recovery.py  test_replay_endpoints.py  test_replay_integration.py  test_resume_prompt.py  test_resume_template.py  test_schemas_hook_events.py  test_schemas_sse_events.py  (+3 more)
(+185 files in other folders)
